--- a/Checklist.html
+++ b/Checklist.html
@@ -114,8 +114,8 @@ applyBodyTag="false"
           <div class="form-buttons">
             <input class="save last" type="button" name="save" value="Save" ng-click="saveResponse()"></input>
             <!-- SPINNER LOADING PLACE -->
-            <input class="submit last" type="submit" name="submit" value="Submit" ng-show="true"></input>
-            <div class="submit last" style="padding-bottom: 19px" ng-show="false">
+            <input class="submit last" id="sub-btn" type="submit" name="submit" value="Submit"></input>
+            <div class="submit last" id="sub-ldr" style="padding-bottom: 19px; display: none;">
               <img src="{!URLFOR($Resource.ChecklistAssets, 'spinner.gif')}" width="28px" height="28px"></img>
             </div>
           </div>
