--- a/Checklist.html
+++ b/Checklist.html
@@ -199,7 +199,7 @@ controllers.PagesController = function ($scope, $timeout) {
 
   $scope.showSpinner = function() {
     if ($scope.checklistForm.$valid) {
-      submitForm();
+      $scope.submitForm();
     } else {
       $("#sub-btn").hide();
       $("#sub-ldr").show();
