--- a/Checklist.html
+++ b/Checklist.html
@@ -68,8 +68,9 @@ applyBodyTag="false"
           <div class="title"> {{checklistName}}  </div>
           <div class="question" ng-repeat="checklistitem in checklistitems | orderBy: 'Checklist_Item__r.Order__c'">
             <span ng-switch="checklistitem.Checklist_Item__r.Type__c">
-              <p ng-show="!{{checklistitem.Checklist_Item__r.Required__c}}"> {{checklistitem.Checklist_Item__r.Question__c}} </p>
-              <p ng-show="{{checklistitem.Checklist_Item__r.Required__c}}"> {{checklistitem.Checklist_Item__r.Question__c}} * </p>
+              <p> {{checklistitem.Checklist_Item__r.Question__c}}
+                <b ng-show="{{checklistitem.Checklist_Item__r.Required__c}}" style="font-style:bold; color:red;"> * </b>
+              </p>
               <div ng-switch-when="Yes/No"> 
                 <p class="toggle-spacer"></p>
                 <input class="yes-no" id="form_yes/no_{{checklistitem.Checklist_Item__c}}" type="checkbox" ng-model="checklistitem.Answer__c"> </input>
